Fix XSS vulnerability JVN#73173030.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.81) stable; urgency=low
+
+  * Fix XSS vulnerability JVN#73173030.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Jun 2017 17:45:52 +0200
+
 openmediavault (3.0.80) stable; urgency=low
 
   * Update locales.
